fix: added text overflow for view cards

--- a/fishing-booking-front/src/app/component/client-homepage/boats/view/view.component.scss
+++ b/fishing-booking-front/src/app/component/client-homepage/boats/view/view.component.scss
@@ -1,6 +1,11 @@
 .example-card {
     width: 400px;
     margin: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
   }
 
   .reservationCard{
